(bf) Angel position - try to fix on mobiles-2

--- a/style.css
+++ b/style.css
@@ -1148,6 +1148,7 @@ margin-top: 3rem;
     font-weight: 200;
     line-height: 2.3rem;
     width: 100%;
+    margin-bottom: 1rem;
   }
 
   span.first-letter {
